add discordian date plugin

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-lxml
-requests
-git+https://github.com/billpmurphy/hask
+argparse==1.2.1
+dateandtime==0.0.5
+ddate==0.1.0
+hask==0.0.1
+lxml==3.4.4
+requests==2.8.1
+wsgiref==0.1.2
